--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -71,9 +71,19 @@
   doi = {10.1145/2429069.2429129},
 }
 
-@misc{groote,
-    author = {Philippe de Groote},
-    title = {A Simple Calculus of Exception Handling}
+@Inbook{deGroote1995,
+author="de Groote, Philippe",
+editor="Dezani-Ciancaglini, Mariangiola
+and Plotkin, Gordon",
+title="A simple calculus of exception handling",
+bookTitle="Typed Lambda Calculi and Applications: Second International Conference on Typed Lambda Calculi and Applications, TLCA '95 Edinburgh, United Kingdom, April 10--12, 1995 Proceedings",
+year="1995",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="201--215",
+isbn="978-3-540-49178-1",
+doi="10.1007/BFb0014054",
+url="http://dx.doi.org/10.1007/BFb0014054"
 }
 
 @book{Pierce:2002:TPL:509043,
@@ -121,6 +131,26 @@
  publisher = {Kluwer Academic Publishers},
  address = {Hingham, MA, USA},
  keywords = {Standard ML, dynamic storage management, regions},
+}
+
+@article{Tofte:1998:RIA:291891.291894,
+ author = {Tofte, Mads and Birkedal, Lars},
+ title = {A Region Inference Algorithm},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {July 1998},
+ volume = {20},
+ number = {4},
+ month = jul,
+ year = {1998},
+ issn = {0164-0925},
+ pages = {724--767},
+ numpages = {44},
+ url = {http://doi.acm.org/10.1145/291891.291894},
+ doi = {10.1145/291891.291894},
+ acmid = {291894},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {regions, standard ML},
 }
 
 @incollection{Barendregt:1993:LCT:162552.162561,
@@ -216,3 +246,17 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
     title = "The little schemer",
     keywords = "book.computers",
 }
+
+@inproceedings{Wadler:1995:MFP:647698.734146,
+ author = {Wadler, Philip},
+ title = {Monads for Functional Programming},
+ booktitle = {Advanced Functional Programming, First International Spring School on Advanced Functional Programming Techniques-Tutorial Text},
+ year = {1995},
+ isbn = {3-540-59451-5},
+ pages = {24--52},
+ numpages = {29},
+ url = {http://dl.acm.org/citation.cfm?id=647698.734146},
+ acmid = {734146},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+} 
