--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -260,3 +260,16 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
 } 
+
+@article{TUR79a,
+    author = {Turner, D.},
+    citeulike-article-id = {2765535},
+    journal = {Software-Practice and Experience},
+    keywords = {rcb-bibfile},
+    pages = {31--49},
+    posted-at = {2008-05-07 12:57:49},
+    priority = {2},
+    title = {{A New Implementation Technique for Applicative Languages}},
+    volume = {9},
+    year = {1979}
+}
